# pytorch-sc2-marl

./: .gitignore  LICENSE  README.md  dispatch_conda_env.py  main.py  requirements.txt  run.py
agents/: __init__.py  learner.py  learner_storage.py  manager.py  worker.py
agents/learner_module/: compute_loss.py  learner_lib.py
agents/learner_module/impala/: learning.py
agents/learner_module/ppo/: learning.py
agents/storage_module/: shared_batch.py
avail/: avail_converter.py
buffers/: rollout_assembler.py  rollout_assembler_lib.py  trajectory.py
env/: env_proxy.py  sc2_env_wrapper.py
networks/: network.py  network_lib.py
observer/: observer.py  observer_lib.py
observer/avail/: avail_converter.py
observer/cxx_flee_algo/: CMakeLists.txt  README.md  build_command.txt  flee_algorithm.cpp  flee_algorithm.h  test.cpp  test.py
observer/cxx_flee_algo/lib_win/: FleeAlgorithm.lib
rewarder/: rewarder.py
utils/: lock.py  machines.json  parameters.json  sc2_config.json  utils.py
utils/sc2_config/: sc2_10gen_terran_config.json  sc2_8m_config.json
